Fixed address overlapping in footer

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -8884,10 +8884,13 @@ span p {
       font-size: 13px; } }
   .contacts-section__info-item {
     margin: 1em 0;
-    white-space: nowrap; }
+    display: flex;
+    align-items: center; }
     .contacts-section__info-item:last-child {
+      justify-content: flex-end;
       text-align: right; }
     .contacts-section__info-item i {
+      margin-right: 0.5em;
       font-size: 24px; }
     .contacts-section__info-item p {
       text-align: left;
@@ -9722,7 +9725,7 @@ input[type="reset"]:focus {
       position: relative; }
       .home .mission-section .cols-wrapper .robo-wrapper img {
         position: absolute;
-        bottom: -3em; } }
+        bottom: -5em; } }
 
 .home .quotes-section {
   min-height: 302px;
