--- a/public/styles/site/partials/_footer.scss
+++ b/public/styles/site/partials/_footer.scss
@@ -27,18 +27,16 @@
 
   &__info-item{
     margin: 1em 0;
-    white-space: nowrap;
-    // position: relative;
-    // margin: 11px 0;
-    // flex: 1 1 50%;
+    // white-space: nowrap;
+    display: flex;
+    align-items: center;
     &:last-child {
+      justify-content: flex-end;
       text-align: right;
     }
     i{
+      margin-right: 0.5em;
       font-size: 24px;
-      // position: absolute;
-      // left: 1px;
-      // top: 3px;
     }
 
     p{
